--- a/index.html
+++ b/index.html
@@ -594,6 +594,6 @@ table {
       <td></td>
     </tr>
   </tbody></table>
-  <script>fill_selects(); select_day(board, new Date()); go()</script>
+  <script>fill_selects(); select_day(board, new Date())</script>
 </body>
 </html>
