--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Daily calendar puzzle</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <script>
 board = [
     "Jan", "Feb", "Mar", "Apr", "May", "Jun", "x",
